--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -5,16 +5,21 @@
 </head>
 <body>
 <h1>Quiz</h1>
+<%= link_to('signout', destroy_user_session_path, :method => :delete) %>
 <%= form_tag({controller: "quizzes", action: "submit"}, method: "post") do %>
   <% @questions.each_with_index do |q,index| %>
     <%= "#{index+1})" %><%= q.question %>
     <% q.options.each do |opt| %>
       <%= radio_button_tag(:options, opt.id) %>
       <%= label_tag(:option,"#{opt.option}") %>
+      <%= hidden_field_tag(:quiz_user, @quiz.user_id) %>
+      <%= hidden_field_tag(:quiz_session, @quiz.session) %>
     <% end %>
-    <%= submit_tag("submit") if params[:page]=="3" %>
+    <%=  %>
+    <%= submit_tag("submit") %>
+    <%= params.inspect %>
   <% end %>
 <% end %>
-<%= will_paginate @questions, :page_links => false, renderer: BootstrapPagination::Rails %>
+
 </body>
 </html>
