--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,7 @@
 <body>
 
 <%= yield %>
-
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-
+  <p class="alert alert-success span3"><button class="close" data-dismiss="alert">×</button><%= notice %></p>
+  <p class="alert alert-error"><button class="close" data-dismiss="alert">×</button><%= alert %></p>
 </body>
 </html>
