--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -19,5 +19,8 @@
         <%= submit_tag("submit", :class => "btn btn-success") %>
     <% end %>
   </diV>
+  <% if flash[:error] %>
+    <div class="alert alert-error"></diV>
+  <% end %>
 </body>
 </html>
