--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= render 'layouts/messages' %>
 <%= yield %>
-  <p class="alert alert-success span3"><button class="close" data-dismiss="alert">×</button><%= notice %></p>
-  <p class="alert alert-error"><button class="close" data-dismiss="alert">×</button><%= alert %></p>
 </body>
 </html>
